--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "echarts": "^5.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "react-thermometer-chart": "^1.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
