--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^5.14.0",
+    "@mui/material": "^5.14.0",
     "antd": "^5.7.0",
     "echarts": "^5.4.2",
     "react": "^18.2.0",
