--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
-    "react-thermometer-chart": "^1.0.3"
+    "react-thermometer-component": "^1.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
