--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "antd": "^5.7.0",
     "echarts": "^5.4.2",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.1",
+    "react-calendar": "^4.4.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
     "react-thermometer-component": "^1.0.1"
