--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.14.0",
     "@mui/material": "^5.14.0",
     "antd": "^5.7.0",
+    "date-fns": "^2.30.0",
     "echarts": "^5.4.2",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.1",
