--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.0",
     "@mui/material": "^5.14.0",
-    "antd": "^5.7.0",
+    "@types/moment": "^2.13.0",
+    "antd": "^5.7.2",
     "date-fns": "^2.30.0",
     "echarts": "^5.4.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.1",
     "react-calendar": "^4.4.0",
